src/djehuty/web/resources/static/css/main.css
/* ... */
#submenu li a:hover { background: #606060; cursor: pointer; }
#submenu li a:active { background: #000000; }
#submenu li.spacer { padding: 0pt; background: none; border: none; margin: 0pt; }
#submenu li a {
    display: inline-block;
    color: #ffffff;
    background: #505050;
    padding: 2pt 6pt 2pt 6pt;
    text-decoration: none;
    line-height: 1.75em;
    border-radius: 4pt;
}
#submenu li.create-button a { background: #925713; color: #ffffff; }
#submenu li.create-button a:hover { background: #b76d18; }
#submenu li.create-button a:active { background: #7a4810; }
#submenu li.save-button a { background: #139257; color: #ffffff; }
#submenu li.save-button a:hover { background: #18b76d; }
#submenu li.save-button a:active { background: #107a48; }
#submenu li.delete-button a { background: #921357; color: #ffffff; }
#submenu li.delete-button a:hover { background: #b7186d; }
#submenu li.delete-button a:active { background: #7a1048; }
img { user-select: none; }
.loader {
    display: block;
    width: auto;
    min-height: 100px;
    background-color: rgba(255, 255, 255, 0.5);
    background-image: url('/static/images/loader.svg');
    background-position: center;
    background-repeat: no-repeat;
    z-index: 100;
}
.no-script { background: #cc0000; color: #ffffff; padding: 1em; }
.hide-for-javascript { display: none !important; }
#message { display: none; color: #ffffff; border-radius: .5em; padding: 0em; margin: 0em;  }
#message p { padding: 1em; }
.success { background: #009900; padding: 0em; margin: 0em; }
.failure { background: #990000; padding: 0em; margin: 0em; }
.hidden { font-size: 0; user-select: none; }
.center { text-align: center; }
.no-select { user-select: none; }
#pre-header {
    display: block;
    width: 100%;
    background: #aa3333;
    height: 3.75em;
    color: #fff;
    text-align: center;
}
#pre-header p { padding: .5em; line-height: 2em; font-size: 1.25em; }
#pre-header a { color: #fff; }
#pre-header a:hover { color: #ccc; }
#pre-header a:active { color: #999; }
.sticky { position: fixed !important; top: 0px; width: 100% }

